// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YuCoin should render as default 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <YuCoin />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Glow />,
        <Component
          style={
            Object {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <Component
            style={
              Object {
                "borderRadius": 53,
                "height": 109,
                "overflow": "hidden",
                "width": 109,
              }
            }
          >
            <Svg
              height="109"
              preserveAspectRatio="xMidYMid meet"
              style={
                Object {
                  "alignItems": "center",
                  "borderRadius": 53,
                  "justifyContent": "center",
                  "overflow": "hidden",
                }
              }
              viewBox="0 0 212 218"
              width="106"
            >
              <Static />
              <Unknown />
            </Svg>
            <Shine />
          </Component>
        </Component>,
      ],
      "style": Object {
        "height": 200,
        "width": 200,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Component
            style={
              Object {
                "borderRadius": 53,
                "height": 109,
                "overflow": "hidden",
                "width": 109,
              }
            }
          >
            <Svg
              height="109"
              preserveAspectRatio="xMidYMid meet"
              style={
                Object {
                  "alignItems": "center",
                  "borderRadius": 53,
                  "justifyContent": "center",
                  "overflow": "hidden",
                }
              }
              viewBox="0 0 212 218"
              width="106"
            >
              <Static />
              <Unknown />
            </Svg>
            <Shine />
          </Component>,
          "style": Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Svg
                height="109"
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "alignItems": "center",
                    "borderRadius": 53,
                    "justifyContent": "center",
                    "overflow": "hidden",
                  }
                }
                viewBox="0 0 212 218"
                width="106"
              >
                <Static />
                <Unknown />
              </Svg>,
              <Shine />,
            ],
            "style": Object {
              "borderRadius": 53,
              "height": 109,
              "overflow": "hidden",
              "width": 109,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <Static />,
                  <Unknown />,
                ],
                "height": "109",
                "preserveAspectRatio": "xMidYMid meet",
                "style": Object {
                  "alignItems": "center",
                  "borderRadius": 53,
                  "justifyContent": "center",
                  "overflow": "hidden",
                },
                "viewBox": "0 0 212 218",
                "width": "106",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "isGrayScale": undefined,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "isGrayScale": undefined,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Glow />,
          <Component
            style={
              Object {
                "alignItems": "center",
                "bottom": 0,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <Component
              style={
                Object {
                  "borderRadius": 53,
                  "height": 109,
                  "overflow": "hidden",
                  "width": 109,
                }
              }
            >
              <Svg
                height="109"
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "alignItems": "center",
                    "borderRadius": 53,
                    "justifyContent": "center",
                    "overflow": "hidden",
                  }
                }
                viewBox="0 0 212 218"
                width="106"
              >
                <Static />
                <Unknown />
              </Svg>
              <Shine />
            </Component>
          </Component>,
        ],
        "style": Object {
          "height": 200,
          "width": 200,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Component
              style={
                Object {
                  "borderRadius": 53,
                  "height": 109,
                  "overflow": "hidden",
                  "width": 109,
                }
              }
            >
              <Svg
                height="109"
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "alignItems": "center",
                    "borderRadius": 53,
                    "justifyContent": "center",
                    "overflow": "hidden",
                  }
                }
                viewBox="0 0 212 218"
                width="106"
              >
                <Static />
                <Unknown />
              </Svg>
              <Shine />
            </Component>,
            "style": Object {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Svg
                  height="109"
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "alignItems": "center",
                      "borderRadius": 53,
                      "justifyContent": "center",
                      "overflow": "hidden",
                    }
                  }
                  viewBox="0 0 212 218"
                  width="106"
                >
                  <Static />
                  <Unknown />
                </Svg>,
                <Shine />,
              ],
              "style": Object {
                "borderRadius": 53,
                "height": 109,
                "overflow": "hidden",
                "width": 109,
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <Static />,
                    <Unknown />,
                  ],
                  "height": "109",
                  "preserveAspectRatio": "xMidYMid meet",
                  "style": Object {
                    "alignItems": "center",
                    "borderRadius": 53,
                    "justifyContent": "center",
                    "overflow": "hidden",
                  },
                  "viewBox": "0 0 212 218",
                  "width": "106",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "isGrayScale": undefined,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "isGrayScale": undefined,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`YuCoin should render as grayscale 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <YuCoin
    isGrayScale={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        null,
        <Component
          style={
            Object {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <Component
            style={
              Object {
                "borderRadius": 53,
                "height": 109,
                "overflow": "hidden",
                "width": 109,
              }
            }
          >
            <Svg
              height="109"
              preserveAspectRatio="xMidYMid meet"
              style={
                Object {
                  "alignItems": "center",
                  "borderRadius": 53,
                  "justifyContent": "center",
                  "overflow": "hidden",
                }
              }
              viewBox="0 0 212 218"
              width="106"
            >
              <Static
                isGrayScale={true}
              />
              <Unknown
                isGrayScale={true}
              />
            </Svg>
          </Component>
        </Component>,
      ],
      "style": Object {
        "height": 200,
        "width": 200,
      },
    },
    "ref": null,
    "rendered": Array [
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Component
            style={
              Object {
                "borderRadius": 53,
                "height": 109,
                "overflow": "hidden",
                "width": 109,
              }
            }
          >
            <Svg
              height="109"
              preserveAspectRatio="xMidYMid meet"
              style={
                Object {
                  "alignItems": "center",
                  "borderRadius": 53,
                  "justifyContent": "center",
                  "overflow": "hidden",
                }
              }
              viewBox="0 0 212 218"
              width="106"
            >
              <Static
                isGrayScale={true}
              />
              <Unknown
                isGrayScale={true}
              />
            </Svg>
          </Component>,
          "style": Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Svg
                height="109"
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "alignItems": "center",
                    "borderRadius": 53,
                    "justifyContent": "center",
                    "overflow": "hidden",
                  }
                }
                viewBox="0 0 212 218"
                width="106"
              >
                <Static
                  isGrayScale={true}
                />
                <Unknown
                  isGrayScale={true}
                />
              </Svg>,
              null,
            ],
            "style": Object {
              "borderRadius": 53,
              "height": 109,
              "overflow": "hidden",
              "width": 109,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <Static
                    isGrayScale={true}
                  />,
                  <Unknown
                    isGrayScale={true}
                  />,
                ],
                "height": "109",
                "preserveAspectRatio": "xMidYMid meet",
                "style": Object {
                  "alignItems": "center",
                  "borderRadius": 53,
                  "justifyContent": "center",
                  "overflow": "hidden",
                },
                "viewBox": "0 0 212 218",
                "width": "106",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "isGrayScale": true,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "isGrayScale": true,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            null,
          ],
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          null,
          <Component
            style={
              Object {
                "alignItems": "center",
                "bottom": 0,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <Component
              style={
                Object {
                  "borderRadius": 53,
                  "height": 109,
                  "overflow": "hidden",
                  "width": 109,
                }
              }
            >
              <Svg
                height="109"
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "alignItems": "center",
                    "borderRadius": 53,
                    "justifyContent": "center",
                    "overflow": "hidden",
                  }
                }
                viewBox="0 0 212 218"
                width="106"
              >
                <Static
                  isGrayScale={true}
                />
                <Unknown
                  isGrayScale={true}
                />
              </Svg>
            </Component>
          </Component>,
        ],
        "style": Object {
          "height": 200,
          "width": 200,
        },
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Component
              style={
                Object {
                  "borderRadius": 53,
                  "height": 109,
                  "overflow": "hidden",
                  "width": 109,
                }
              }
            >
              <Svg
                height="109"
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "alignItems": "center",
                    "borderRadius": 53,
                    "justifyContent": "center",
                    "overflow": "hidden",
                  }
                }
                viewBox="0 0 212 218"
                width="106"
              >
                <Static
                  isGrayScale={true}
                />
                <Unknown
                  isGrayScale={true}
                />
              </Svg>
            </Component>,
            "style": Object {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Svg
                  height="109"
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "alignItems": "center",
                      "borderRadius": 53,
                      "justifyContent": "center",
                      "overflow": "hidden",
                    }
                  }
                  viewBox="0 0 212 218"
                  width="106"
                >
                  <Static
                    isGrayScale={true}
                  />
                  <Unknown
                    isGrayScale={true}
                  />
                </Svg>,
                null,
              ],
              "style": Object {
                "borderRadius": 53,
                "height": 109,
                "overflow": "hidden",
                "width": 109,
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <Static
                      isGrayScale={true}
                    />,
                    <Unknown
                      isGrayScale={true}
                    />,
                  ],
                  "height": "109",
                  "preserveAspectRatio": "xMidYMid meet",
                  "style": Object {
                    "alignItems": "center",
                    "borderRadius": 53,
                    "justifyContent": "center",
                    "overflow": "hidden",
                  },
                  "viewBox": "0 0 212 218",
                  "width": "106",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "isGrayScale": true,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "isGrayScale": true,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              null,
            ],
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`YuCoin should render when loading 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <YuCoin
    isLoading={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Glow />,
        <Component
          style={
            Object {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <Component
            style={
              Object {
                "borderRadius": 53,
                "height": 109,
                "overflow": "hidden",
                "width": 109,
              }
            }
          >
            <Svg
              height="109"
              preserveAspectRatio="xMidYMid meet"
              style={
                Object {
                  "alignItems": "center",
                  "borderRadius": 53,
                  "justifyContent": "center",
                  "overflow": "hidden",
                }
              }
              viewBox="0 0 212 218"
              width="106"
            >
              <Static />
              <Giraffe />
            </Svg>
          </Component>
        </Component>,
      ],
      "style": Object {
        "height": 200,
        "width": 200,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Component
            style={
              Object {
                "borderRadius": 53,
                "height": 109,
                "overflow": "hidden",
                "width": 109,
              }
            }
          >
            <Svg
              height="109"
              preserveAspectRatio="xMidYMid meet"
              style={
                Object {
                  "alignItems": "center",
                  "borderRadius": 53,
                  "justifyContent": "center",
                  "overflow": "hidden",
                }
              }
              viewBox="0 0 212 218"
              width="106"
            >
              <Static />
              <Giraffe />
            </Svg>
          </Component>,
          "style": Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Svg
                height="109"
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "alignItems": "center",
                    "borderRadius": 53,
                    "justifyContent": "center",
                    "overflow": "hidden",
                  }
                }
                viewBox="0 0 212 218"
                width="106"
              >
                <Static />
                <Giraffe />
              </Svg>,
              null,
            ],
            "style": Object {
              "borderRadius": 53,
              "height": 109,
              "overflow": "hidden",
              "width": 109,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <Static />,
                  <Giraffe />,
                ],
                "height": "109",
                "preserveAspectRatio": "xMidYMid meet",
                "style": Object {
                  "alignItems": "center",
                  "borderRadius": 53,
                  "justifyContent": "center",
                  "overflow": "hidden",
                },
                "viewBox": "0 0 212 218",
                "width": "106",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "isGrayScale": undefined,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            null,
          ],
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Glow />,
          <Component
            style={
              Object {
                "alignItems": "center",
                "bottom": 0,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <Component
              style={
                Object {
                  "borderRadius": 53,
                  "height": 109,
                  "overflow": "hidden",
                  "width": 109,
                }
              }
            >
              <Svg
                height="109"
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "alignItems": "center",
                    "borderRadius": 53,
                    "justifyContent": "center",
                    "overflow": "hidden",
                  }
                }
                viewBox="0 0 212 218"
                width="106"
              >
                <Static />
                <Giraffe />
              </Svg>
            </Component>
          </Component>,
        ],
        "style": Object {
          "height": 200,
          "width": 200,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Component
              style={
                Object {
                  "borderRadius": 53,
                  "height": 109,
                  "overflow": "hidden",
                  "width": 109,
                }
              }
            >
              <Svg
                height="109"
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "alignItems": "center",
                    "borderRadius": 53,
                    "justifyContent": "center",
                    "overflow": "hidden",
                  }
                }
                viewBox="0 0 212 218"
                width="106"
              >
                <Static />
                <Giraffe />
              </Svg>
            </Component>,
            "style": Object {
              "alignItems": "center",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Svg
                  height="109"
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "alignItems": "center",
                      "borderRadius": 53,
                      "justifyContent": "center",
                      "overflow": "hidden",
                    }
                  }
                  viewBox="0 0 212 218"
                  width="106"
                >
                  <Static />
                  <Giraffe />
                </Svg>,
                null,
              ],
              "style": Object {
                "borderRadius": 53,
                "height": 109,
                "overflow": "hidden",
                "width": 109,
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <Static />,
                    <Giraffe />,
                  ],
                  "height": "109",
                  "preserveAspectRatio": "xMidYMid meet",
                  "style": Object {
                    "alignItems": "center",
                    "borderRadius": 53,
                    "justifyContent": "center",
                    "overflow": "hidden",
                  },
                  "viewBox": "0 0 212 218",
                  "width": "106",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "isGrayScale": undefined,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {},
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              null,
            ],
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
